--- a/midterm_toc (1).Rmd
+++ b/midterm_toc (1).Rmd
@@ -116,7 +116,7 @@ In this dataframe, 'nicu_day', 'obs_hour', 'preopday', and 'pay_fix' are the fou
 6. Remove all variables with missing values. 
 
 ```{r}
-df %>% select(-payfix, -preopday, -obs_hour, -nicu_day)
+df <- df %>% select(-payfix, -preopday, -obs_hour, -nicu_day)
 ```
 
 7. Refer to the data description in the file `HDD2015-18cy6-20-19.docx`, which variable recording the month of admission?, which variable recording the month of discharge?
