--- a/assignment8.Rmd
+++ b/assignment8.Rmd
@@ -35,7 +35,7 @@ library(gganimate)
 library(ggplot2)
 library(tidyverse)
 library(knitr)
-df = read_csv('adult_census_missing (1).csv')
+df = read_csv('https://bryantstats.github.io/math421/data/adult_census_missing.csv')
 ```
 
 ```{r}
